--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -2,6 +2,8 @@ name: Deploying on Demo Server
 
 on:
   push:
+    branches:
+      - main
     tags:
       - v*.*.*.*
 
@@ -17,3 +19,6 @@ jobs:
       - uses: actions/checkout@v2     #pulling code from repository
       - name: checkout
         run: mkdir -p /tmp/.build     #creating a .build folder
+      - name: Exit if not on master branch
+        if: endsWith(github.ref, 'main') == false
+        run: exit -1
