--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,9 +18,9 @@ jobs:
       - uses: actions/checkout@v2     #pulling code from repository
       - name: checkout
         run: mkdir -p /tmp/.build     #creating a .build folder
-      - name: Exit if not on master branch
+      - name: Exit if not on main branch
         run: exit -1
-      - name: Exit if not on master branch
+      - name: Exit if not on main branch
         if: github.ref == 'refs/heads/main'
         run: |
               ... publish commands ...
