changed in workflow

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,6 +19,4 @@ jobs:
       - name: checkout
         run: mkdir -p /tmp/.build     #creating a .build folder
       - name: Exit if not on main branch
-        if: github.ref == 'refs/heads/main'
-        run: |
-              ... publish commands ...
+        run: github.ref
