--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,5 +18,5 @@ jobs:
       - uses: actions/checkout@v2     #pulling code from repository
       - name: checkout
         run: mkdir -p /tmp/.build     #creating a .build folder
-      - name: Exit if not on main branch
-        run: github.ref
+      - name: Branch name
+        run: echo running on branch ${GITHUB_REF##*/}
